# ls-tree

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_REPORT.md  LICENSE  PUBLISH.md  README.md  REFACTORING_SUMMARY.md  cliff.toml  pyproject.toml  setup_repo.sh
.cursor/rules/: git-workflow.mdc  python.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: changelog.yml  ci.yml  pre-release.yml  release.yml
scripts/: release.py
src/ls_tree/: __init__.py  __main__.py
src/trxd/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_build_tree.py  test_filtering.py  test_integration.py  test_main.py  test_metadata.py  test_renderers.py  test_utils.py
